mayus in hoodboy

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <div class="card n4">
         <img src="/img/guy-in-hoodie-wallpapers-109024-919818-8704777.png" alt="">
-            <h2>hood boy</h2>
+            <h2>Hood boy</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                  Ipsum mollitia distinctio magnam nulla, necessitatibus iure commodi 
                  cum ab voluptate doloremque. Tenetur, eos? Impedit obcaecati harum 
